feature: twitch api more advanced requests

--- a/pylama.ini
+++ b/pylama.ini
@@ -11,5 +11,5 @@ max_line_length = 120
 ignore = E501,E261,E201,E202,E302,E305,E731,W6,E402
 
 [pylama:pylint]
-disable = R,E1101,E1130,E1136,C0103,C0114,C0115,R0901,R0903,W0511,W1401,W0622
+disable = R,E1101,E1130,E1136,C0103,C0114,C0115,R0901,R0903,W0511,W1401,W0622,R1710
 max_line_length = 120
