--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "twitch-tube"
+name = "twitch-compyle"
 version = "0.1.0-alpha.1"
 description = ""
 
@@ -14,6 +14,7 @@ license = "Apache-2.0"
 python = "~3.10"
 python-dotenv = "^0.21.0"
 requests = "2.28.1"
+moviepy= "1.0.3"
 djangorestframework = "^3.14"
 
 [tool.poetry.dev-dependencies]
