--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ isort = "^5.10.1"
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.0.0"]
 
-[tool.isort]
+[tool.black]
 exclude = '''
 (
     /(
@@ -41,5 +41,5 @@ exclude = '''
 include = '\.pyi?$'
 line-length = 120
 
-[tool.black]
-line-length = 120
+[tool.isort]
+profile = "black"
