--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,17 @@ license = "Apache-2.0"
 [tool.poetry.dependencies]
 python = "~3.10"
 python-dotenv = "^0.21.0"
-requests = "2.28.1"
-moviepy= "1.0.3"
 djangorestframework = "^3.14"
+requests = "2.28.1"
+moviepy = "1.0.3"
+"foliantcontrib.imagemagick" = "1.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
 pylama = "^8.4.1"
 pylint = "^2.15.5"
 isort = "^5.10.1"
-
+aenum = "3.1.11"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
