--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ djangorestframework = "^3.14"
 requests = "2.28.1"
 moviepy = "1.0.3"
 "foliantcontrib.imagemagick" = "1.0.2"
+pygame = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
