--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ stages:
   - lint
 
 before_install:
-  - python -m pip install --upgrade pip
+  - pip install --upgrade pip
   - pip install poetry
   - which pip
 
