--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "editor.formatOnSave": true,
         "editor.matchBrackets": "always",
         "editor.inlineSuggest.enabled": true,
+        "editor.rulers": [
+            120
+        ],
     },
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
