--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0-alpha.1"
 description = ""
 
 authors = [
+    "adesvall <adesvall@users.noreply.github.com>",
     "amaurylrd <amaurylrd@users.noreply.github.com>",
     "ThomasAbreuDias <ThomasAbreuDias@users.noreply.github.com>"
 ]
@@ -11,13 +12,12 @@ readme = "README.md"
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "~3.8"
+python = ">=3.8,<4"
 python-dotenv = "^0.21.0"
 aenum = "3.1.11"
 djangorestframework = "^3.14"
 requests = "2.28.1"
 moviepy = "1.0.3"
-pygame = "^2.1.2"
 opencv-python = "4.6.0.66"
 
 [tool.poetry.dev-dependencies]
@@ -25,6 +25,7 @@ black = "^22.10.0"
 pylama = "^8.4.1"
 pylint = "^2.15.5"
 isort = "^5.10.1"
+bandit = "^1.7.4"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
