--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,20 @@
 [tool.poetry]
 name = "twitch-compyle"
 version = "0.1.0-alpha.1"
-description = ""
-
+description = "Twitch Compyle is an app that allows you to create Youtube compilations of the latest Twitch clips on your favorite games."
 authors = [
     "adesvall <adesvall@users.noreply.github.com>",
     "amaurylrd <amaurylrd@users.noreply.github.com>",
     "thomasabreudias <thomasabreudias@users.noreply.github.com>"
 ]
-repository = "https://https://github.com/amaurylrd/twitch_compyle"
+
+repository = "https://github.com/amaurylrd/twitch_compyle"
 readme = "README.md"
 license = "Apache-2.0"
+classifiers = [
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Version Control :: Git",
+]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
@@ -29,6 +33,9 @@ black = "^22.10.0"
 pylama = {extras = ["all"], version = "^8.4.1"}
 isort = "^5.10.1"
 
+[tool.poetry.group.doc.dependencies]
+pdoc = "13.1.1"
+
 [build-system]
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.2.0"]
@@ -40,6 +47,7 @@ exclude = '''
         \.git
         |\.tox
         |migrations
+        |\.venv
     )/
 )
 '''
