--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,5 @@ YOUTUBE_APP_EMAIL_ADDRESS=<YOUTUBE_APP_REDIRECT_URI>
 TWITCH_APP_CLIENT_ID=<TWITCH_APP_CLIENT_ID>
 TWITCH_APP_CLIENT_SECRET=<TWITCH_APP_CLIENT_SECRET>
 TWITCH_APP_REDIRECT_URI=<TWITCH_APP_REDIRECT_URI>
+
+MONGO_DB_URI=<MONGO_DB_URI>
