--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 python-dotenv = "^0.21.0"
+pymongo = {extras = ["srv"], version = "^4.3.3"}
+jsonschema = "^4.0.1"
 aenum = "3.1.11"
 djangorestframework = "^3.14"
 requests = "2.28.1"
