--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ TWITCH_APP_CLIENT_SECRET=<TWITCH_APP_CLIENT_SECRET>
 TWITCH_APP_REDIRECT_URI=<TWITCH_APP_REDIRECT_URI>
 
 MONGO_DB_URI=<MONGO_DB_URI>
+MONGO_DB_NAME=<MONGO_DB_NAME>
