--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,21 @@ license = "Apache-2.0"
 classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Version Control :: Git",
+    "Topic :: Utilities",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "Programming Language :: Python :: 3.8",
+    "License :: Other/Proprietary License",
+    "Operating System :: Microsoft :: Windows :: Windows 10",
+    "Operating System :: Unix",
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 python-dotenv = "^0.21.0"
-pymongo = {extras = ["srv"], version = "^4.3.3"}
+pymongo = {extras = ["srv"], version = "^3.12"}
 jsonschema = "^4.0.1"
+retrying = "^1.3.4"
 aenum = "3.1.11"
 djangorestframework = "^3.14"
 requests = "2.28.1"
