--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4"
+python = "~3.10"
+
 python-dotenv = "^0.21.0"
 pymongo = {extras = ["srv"], version = "^3.12"}
 jsonschema = "^4.0.1"
@@ -33,18 +34,29 @@ aenum = "3.1.11"
 djangorestframework = "^3.14"
 requests = "2.28.1"
 moviepy = "1.0.3"
-opencv-python = "4.6.0.66"
-
-[tool.poetry.dev-dependencies]
-bandit = "^1.7.4"
+opencv-python = ">=4.7.0"
 
 [tool.poetry.group.lint.dependencies]
-black = "^22.10.0"
-pylama = {extras = ["all"], version = "^8.4.1"}
-isort = "^5.10.1"
+bandit = "1.7.5"
+black = "23.3.0"
+pylama = {extras = ["all"], version = "^7.7.1"}
+pylint = "^2.10.2"
+pydocstyle = "6.1.1"
+types-docutils = "^0.19.0"
+types-markdown = "^3.4.2.9"
+types-python-dateutil = "^2.8.19.6"
+types-setuptools = "^65.7.0.3"
+isort = "5.12.0"
+flake8 = "^3.9.2"
+eradicate = "^2.2.0"
+mypy = "^1.1"
+toml = "^0.10.2"
 
 [tool.poetry.group.doc.dependencies]
 pdoc = "13.1.1"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -55,8 +67,6 @@ exclude = '''
 (
     /(
         \.git
-        |\.tox
-        |migrations
         |\.venv
     )/
 )
@@ -70,11 +80,12 @@ known_first_party = "compyle"
 
 [tool.pylama]
 format = "pycodestyle"
-linters = "pycodestyle,pyflakes,mccabe,pylint"
+linters = "pycodestyle,pyflakes,mccabe,eradicate,pylint"
 skip = "resources/*,.venv/*,tests/*"
 max_line_length = 120
 
 [tool.pylama.linter.pycodestyle]
+convention = "google"
 ignore = "E501,E261,E201,E202,E302,E305,E731,W6,E402,W503,W605"
 max_line_length = 120
 
