--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python: "3.8"
 
 stages:
   - lint
+  - release
 
 before_install:
   - PROJECT_DIR=$(pwd)/compyle
@@ -12,7 +13,7 @@ before_install:
 
 install:
   - poetry config virtualenvs.create false
-  - poetry install --no-root --no-interaction --no-ansi
+  - poetry install --no-root --no-interaction --no-ansi --without dev
 
 jobs:
   include:
@@ -25,3 +26,10 @@ jobs:
       name: "Bandit"
       script:
         - poetry run bandit -r $PROJECT_DIR
+
+    - stage: release
+      name: "Release"
+      if: branch = main AND type = push AND NOT commit_message =~ /^chore\(release\):/
+      skip_cleanup: true
+      script:
+        - poetry run semantic-release publish
