--- a/.github/workflows/common/.pylama.yaml
+++ b/.github/workflows/common/.pylama.yaml
@@ -2,4 +2,8 @@ name: Run Pylama
 runs:
   using: composite
   steps:
+    - run: python --version
+    - run: pip --version
+    - run: poetry --version
     - run: poetry run pylama
+
