--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -8,13 +8,13 @@ on:
   pull_request:
     branches:
       - '**'
-  
+
 jobs:
   dependencies:
     name: Install Dependencies
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.0.2
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
       - uses: ./.github/actions/cache
 
   quality:
@@ -22,7 +22,50 @@ jobs:
     needs: [dependencies]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.0.2
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+      - uses: ./.github/actions/cache
+      - uses: ./.github/actions/bandit
       - uses: ./.github/actions/pylama
-      # - uses: ./.github/actions/bandit
   
+  test:
+    name: Test
+    needs: [dependencies]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+      - uses: ./.github/actions/cache
+      - uses: ./.github/actions/coverage
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    concurrency: release
+    needs: [dependencies] # TODO quality
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && !contains(github.event.head_commit.message, 'chore(release):')
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+        with:
+          fetch-depth: 0
+      - uses: ./.github/actions/cache
+      - uses: ./.github/actions/semantic-release
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+         
+      
+      # - name: Configure git
+      #   run: |
+      #     git config user.name github-actions
+      #     git config user.email
+      
+      # - name: Run python semantic release
+      #   run: |
+      #     poetry run semantic-release changelog --post
+      #     poetry run semantic-release version
+
+      # - name: Publish semver
+      #   run: poetry run semantic-release publish
+      
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     # PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      #     # semantic
