--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 default_stages: [commit]
 default_language_version:
-  node: "16.16.0"
+  node: "18.12.0"
   python: "python3.10"
 
 exclude: '.vscode/'
@@ -22,6 +22,7 @@ repos:
     hooks:
       - id: pylama
         args:
+          - --option=pyproject.toml
           - --max-line-length=120
         additional_dependencies: [toml, mypy, eradicate, pydocstyle==6.1.1]
 
