--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,10 +81,14 @@ line-length = 120
 profile = "black"
 known_first_party = "compyle"
 
+[tool.bandit]
+targets = ["compyle"]
+exclude_dirs = [".venv"]
+
 [tool.pylama]
 format = "pycodestyle"
 linters = "pycodestyle,pyflakes,mccabe,eradicate,pylint"
-skip = "resources/*,.venv/*,tests/*"
+skip = ".venv/*"
 max_line_length = 120
 
 [tool.pylama.linter.pycodestyle]
@@ -97,7 +101,7 @@ disable = "R,E1101,E1130,E1136,E0401,C0103,C0114,C0115,C0116,W0511,W0603,W0612,W
 max_line_length = 120
 
 [tool.semantic_release]
-version_variable = "compyle\\__init__.py:__version__"
+version_variable = "compyle/__init__.py:__version__"
 version_toml = [
     "pyproject.toml:tool.poetry.version",    
 ]
