--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -10,13 +10,23 @@ on:
       - '**'
 
 jobs:
+  # TODO faudra git fetch le head
+  renovate:
+    name: Renovate
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+      - uses: ./.github/actions/renovate
+      # if: github.event_name == 'pull_request'
+
   dependencies:
     name: Install Dependencies
+    needs: [renovate]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
       - uses: ./.github/actions/cache
-
+  
   quality:
     name: Quality
     needs: [dependencies]
