--- a/.github/actions/renovate/action.yaml
+++ b/.github/actions/renovate/action.yaml
@@ -6,11 +6,10 @@ description: Run Renovate package to update proetry dependencies
 inputs:
   renovate-version:
     description: ""
-    default: "35.0.0"
+    default: "38.1.11"
   renovate-token:
     description: ""
     default: ${{ github.token }}
-    # ${{ env.GITHUB_COM_TOKEN }}
   renovate-image:
     description: ""
     default: myproxyhub.domain.com/renovate/renovate
@@ -18,9 +17,9 @@ inputs:
 runs:
   using: composite
   steps:
-  - name: Self-hosted Renovate
-    uses: renovatebot/github-action@v38.1.6
+  - name: Self-hosted Renovate ${{ inputs.renovate-version }}
+    uses: renovatebot/github-action@v${{ inputs.renovate-version }}
     with:
-      renovate-version: ${{ inputs.renovate-version }}
       token: ${{ inputs.renovate-token }}
       renovate-image: ${{ inputs.renovate-image }}
+      base-dir: ${{ github.workspace }}
