--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
             120
         ],
     },
+    "javascript.validate.enable": true,
+    "javascript.suggestionActions.enabled": false,
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
     "python.linting.pylintEnabled": true,
