fix: add pre-commit config file to renovate

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,8 @@ TWITCH_APP_REDIRECT_URI=<TWITCH_APP_REDIRECT_URI>
 
 MONGO_DB_URI=<MONGO_DB_URI>
 MONGO_DB_NAME=<MONGO_DB_NAME>
+
+# custom commands
+
+git_fetch="get fetch --all --tags ; git pull"
+git_ammend="git commit --amend --no-edit ; git push -f"
