--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,6 +58,13 @@ repos:
     hooks:
       -   id: validate_manifest
 
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v2.4.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: []
+
   - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
     rev: "v1.3.1"
     hooks:
