--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,8 @@ repos:
     hooks:
       - id: absolufy-imports
 
-  - repo: https://github.com/ambv/black
-    rev: "23.3.0"
+  - repo: https://github.com/psf/black
+    rev: "23.7.0"
     hooks:
       - id: black
         language_version: python3.10
@@ -54,9 +54,9 @@ repos:
           - "--no-ensure-ascii"
 
   - repo: https://gitlab.com/smop/pre-commit-hooks
-    rev: master
+    rev: v1.0.0
     hooks:
-      -   id: validate_manifest
+      -   id: check-poetry
 
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v2.4.0
@@ -66,7 +66,7 @@ repos:
         args: []
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    rev: "v1.3.1"
+    rev: "v1.3.2"
     hooks:
       - id: python-safety-dependencies-check
         files: pyproject.toml
@@ -97,7 +97,7 @@ repos:
         additional_dependencies: ["@commitlint/config-angular"]
 
   - repo: https://github.com/codespell-project/codespell
-    rev: "v2.2.4"
+    rev: "v2.2.5"
     hooks:
       - id: codespell
         require_serial: false
@@ -105,6 +105,6 @@ repos:
         additional_dependencies: ["tomli"]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.4.0
+    rev: v3.10.1
     hooks:
       - id: pyupgrade
