fix: pre-commit fixes

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,8 @@
   "extends": [
     "github>renovatebot/.github"
   ],
-  "enabledManagers": ["poetry", "pre-commit"]
+  "enabledManagers": [
+    "poetry",
+    "pre-commit"
+  ]
 }
