--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: absolufy-imports
 
   - repo: https://github.com/psf/black
-    rev: "23.7.0"
+    rev: "23.9.1"
     hooks:
       - id: black
         language_version: python3.10
@@ -108,3 +108,10 @@ repos:
     rev: v3.10.1
     hooks:
       - id: pyupgrade
+
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: '1.6.0'
+    hooks:
+    -   id: poetry-check
+    -   id: poetry-lock
