--- a/.github/actions/pre-commit/action.yaml
+++ b/.github/actions/pre-commit/action.yaml
@@ -4,7 +4,7 @@ description: Run pre-commit hook
 inputs:
   extra-args:
     description: List of options to pass to pre-commit
-    default: "all-files"
+    default: "--all-files"
 
 runs:
   using: composite
@@ -14,5 +14,5 @@ runs:
         path: ~/.cache/pre-commit
         key: ${{ runner.os }}-pre-commit-${{ hashFiles('**/pre-commit-config.yaml') }}
 
-    - run: poetry run pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
+    - run: poetry run pre-commit --verbose=false run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
       shell: bash
