--- a/.github/actions/pre-commit/action.yaml
+++ b/.github/actions/pre-commit/action.yaml
@@ -14,5 +14,7 @@ runs:
         path: ~/.cache/pre-commit
         key: ${{ runner.os }}-pre-commit-${{ hashFiles('**/pre-commit-config.yaml') }}
 
-    - run: poetry run pre-commit --verbose=false run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
+    - run: |
+        poetry run pre-commit install --install-hooks
+        poetry run pre-commit --verbose=false run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
       shell: bash
