--- a/.github/actions/renovate/action.yaml
+++ b/.github/actions/renovate/action.yaml
@@ -19,7 +19,8 @@ runs:
     with:
       token: ${{ inputs.renovate-token }}
       renovate-image: ${{ inputs.renovate-image }}
-      dry-run: --dry-run lookup
+      useSlim: true
+      # dry-run: --dry-run lookup
       configurationFile: .github/actions/renovate/renovate-config.json.js
 
       # https://docs.renovatebot.com/self-hosted-configuration/#dryrun
