--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -57,6 +57,7 @@ jobs:
       - uses: actions/checkout@8b5e8b768746b50394015010d25e690bfab9dfbc
         with:
           fetch-depth: 0
+          fetch-tags: true
       - uses: ./.github/actions/cache
       - uses: ./.github/actions/semantic-release
 
