--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -14,10 +14,11 @@ jobs:
   renovate:
     name: Renovate
     runs-on: ubuntu-latest
+    concurrency: renovate
     steps:
       - uses: actions/checkout@8b5e8b768746b50394015010d25e690bfab9dfbc
       - uses: ./.github/actions/renovate
-      # if: github.event_name == 'pull_request'
+      # if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'pull_request')
 
   dependencies:
     name: Install Dependencies
