--- a/.github/actions/pre-commit/action.yaml
+++ b/.github/actions/pre-commit/action.yaml
@@ -15,7 +15,7 @@ runs:
         key: ${{ runner.os }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
 
     - run: |
-        poetry run pre-commit install
+        poetry run pre-commit install --install-hooks
         poetry run pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
       shell: bash
       #--install-hooks
