--- a/.github/actions/pre-commit/action.yaml
+++ b/.github/actions/pre-commit/action.yaml
@@ -16,12 +16,8 @@ runs:
 
     - run: |
         poetry run pre-commit install --install-hooks
-        poetry run pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
+        poetry run pre-commit run --from-ref HEAD^^^ --to-ref HEAD --show-diff-on-failure --color=always ${{ inputs.extra-args }}
       shell: bash
-      #--install-hooks
-
-  # todo ajouter un workspace
-  # ou exclure env
 
   # add verbose false a la config
   # https://pre-commit.com/#pre-commit-run
