--- a/.github/actions/pre-commit/action.yaml
+++ b/.github/actions/pre-commit/action.yaml
@@ -16,7 +16,7 @@ runs:
 
     - run: |
         poetry run pre-commit install --install-hooks
-        poetry run pre-commit run --from-ref HEAD^^^ --to-ref HEAD --show-diff-on-failure --color=always ${{ inputs.extra-args }}
+        poetry run pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra-args }}
       shell: bash
 
   # add verbose false a la config
