--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,20 +19,21 @@ classifiers = [
     "Topic :: Utilities",
     "Intended Audience :: Developers",
     "Natural Language :: English",
-    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.10",
     "License :: Other/Proprietary License",
     "Operating System :: Microsoft :: Windows :: Windows 10",
     "Operating System :: Unix",
 ]
 
 [tool.poetry.dependencies]
-python = "~3.11.0"
+python = "~3.10.0"
 python-semantic-release = "^8.0.0"
 python-dotenv = "^1.0.0"
 
 pymongo = {extras = ["srv"], version = "^4.0.0"}
 jsonschema = "^4.0.1"
 retrying = "^1.3.4"
+numpy = "^1.26.0"
 aenum = "3.1.15"
 djangorestframework = "^3.14"
 requests = "2.31.0"
